chore(docs): fix WebsiteConfiguration on mobile

--- a/apps/docs/src/components/WebsiteConfiguration/WebsiteConfiguration.module.scss
+++ b/apps/docs/src/components/WebsiteConfiguration/WebsiteConfiguration.module.scss
@@ -5,4 +5,7 @@
     background-color,
     everything.theme-get-var(surface-color)
   );
+  @include everything.phone-media {
+    width: 100%;
+  }
 }
